# polaris-music

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  CODE_REVIEW.md  DOCUMENTATION_ANALYSIS.md  README.md  deploy.sh  docker-compose.yml
.github/: README.md  dependabot.yml  labeler.yml
.github/workflows/: backend-ci.yml  ci.yml  contracts-ci.yml  deploy.yml  docker-publish.yml  frontend-ci.yml  pr-checks.yml  release.yml
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/docs/: T4-ID-UNIFICATION-SUMMARY.md  T5-CHAIN-INGESTION-SUMMARY.md  T6-SHIP-FALLBACK-SUMMARY.md
backend/scripts/: backfillRelationships.js  clearGraphData.js  loadSmokeTests.js  loadWhiteAlbumData.js
backend/smoke-tests/: README.md  create-release-bundle-antemasque.tmpl.json  create-release-bundle-blood-sugar-sex-magik.tmpl.json  create-release-bundle-de-loused-comatorium.tmpl.json  create-release-bundle-dont-panic.tmpl.json  (+3 more)
backend/test/: handles.js  (+6 more)
contracts/: CMakeLists.txt  EMISSION_UPDATE_NOTES.md  README.md  TAG_VALIDATION.md  build.sh  deploy-testnet.sh  deploy-token.sh  polaris.music.cpp
contracts/ricardian/: polaris.music.contracts.md
contracts/test/: README.md  package-lock.json  package.json  polaris.test.js
contracts/test/unit/: validation.test.js
docs/: 01-smart-contract.md  02-graph-database-schema.md  03-event-storage.md  04-event-processor.md  05 substreams-integration.md  06 frontend-visualization.md  07 api-server.md  08-deployment-configuration.md  08-ipfs-cid-architecture.md  09-testing-suite.md  10-data-import-tools-md.md  11-readme-documentation.md  12-identity-protocol.md  JIT-spec-sheet.md  canonicalization-divergence.md  code-audit-report.md  graph-example-spec-sheet.md  stage-h-frontend-handoff.md  visualization-implementation-plan.md
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  index.html  package-lock.json  package.json  playwright.config.mjs  styles.css  visualization.html  vite.config.js
k8s/: README.md
scripts/: smoke_pipeline.sh
shared/: package.json
substreams/: .gitignore  BUILD.md  CHAIN-INGESTION.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  substreams.yaml
substreams/abi/: polaris.music.json
substreams/proto/: polaris.proto
substreams/sink/: http-sink.js  http-sink.mjs  test-hash-helpers.mjs  test-normalize-params.mjs  test-processline-formats.mjs
substreams/src/: lib.rs
substreams/src/abi/: mod.rs
substreams/src/pb/: mod.rs  polaris.v1.rs
tools/: README.md
(+211 files in other folders)
