[package]
name = "polaris-substreams"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Substreams core
substreams = "0.6"
substreams-antelope = "0.6"

# Protocol Buffers (must match substreams 0.6 which uses prost 0.13)
prost = "0.13"
prost-types = "0.13"

# Serialization (required by ABI-generated code)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
hex = "0.4"
sha2 = "0.10"

[build-dependencies]
substreams-antelope-abigen = "0.6"
anyhow = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = true
